<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>

    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button">Download</string>
    <string name="loading">We are loading </string>
    <string name="activity_detail">DetailActivity</string>

    <string name="glide">Glide – An Image Loading Library by Bumptech</string>
    <string name="loadapp">LoadApp - Current repository by Udacity</string>
    <string name="retrofit">Retrofit - Type-Safe HTTP client for Android and Java by Square, Inc</string>

    <string name="header">header image</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
    <string name="ok">OK</string>
    <string name="status_fail">Fail</string>
    <string name="status_success">Success</string>
</resources>
